--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,14 @@
 {
   "C_Cpp.default.compilerPath": "C:\\msys64\\mingw64\\bin\\gcc.exe",
-  "cSpell.words": [
-    "clox"
-  ]
+  "cSpell.words": ["clox"],
+  "files.associations": {
+    "*.ejs": "html",
+    "common.h": "c",
+    "chunk.h": "c",
+    "memory.h": "c",
+    "debug.h": "c",
+    "value.h": "c",
+    "vm.h": "c",
+    "stdio.h": "c"
+  }
 }
